# poetry-plugin-pypi-mirror

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/poetry_plugin_pypi_mirror/: plugins.py  py.typed
