[tool.poetry]
name = "poetry-plugin-pypi-mirror"
version = "0.4.2"
description = "Poetry plugin that adds support for pypi.org mirrors and pull-through caches"
authors = ["Jacob Henner <code@ventricle.us>"]
license = "BSD-3-Clause"
keywords = ["packaging", "poetry", "pypi"]
readme = "README.md"
homepage = "https://github.com/arcesium/poetry-plugin-pypi-mirror"
repository = "https://github.com/arcesium/poetry-plugin-pypi-mirror"

[tool.poetry.dependencies]
python = "^3.8.1"
poetry = ">= 1.3, < 1.9"

[tool.poetry.plugins."poetry.plugin"]
demo = "poetry_plugin_pypi_mirror.plugins:PyPIMirrorPlugin"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
mypy = "^1.5.1"
bandit = "^1.7.5"
isort = "^5.12.0"
pre-commit = "^3.4.0"
flake8 = "^6.1.0"

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src/poetry_plugin_pypi_mirror", "tests"]

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[[tool.mypy.overrides]]
module = [
  'cleo.*',
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
